--- a/to-do-list/src/Pages/About.css
+++ b/to-do-list/src/Pages/About.css
@@ -16,21 +16,37 @@
   .profile-container {
     margin: 30px;
     text-align: center;
-    margin-bottom: 10px; /* Adiciona uma margem inferior maior */
+    margin-bottom: 10px; 
+  }
+  .icon {
+    width: 30px;
+    height: 30px;
+  }
+  .icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .icon-container a {
+    margin-right: 10px; 
   }
   
   .profile {
     width: 200px;
     height: 200px;
-    border-radius: 50%; /* Faz a borda circular */
+    border-radius: 50%; 
   }
   
   .link-container {
     margin-top: 10px;
+  
   }
+ 
   
   .about-paragraph {
     text-align: center;
     margin-top: 50px;
+   
   }
   
