--- a/to-do-list/src/Components/Inside.css
+++ b/to-do-list/src/Components/Inside.css
@@ -13,7 +13,7 @@
     align-items: center;
     gap: 50px;
   }
-  ul {
+.tasks-list-wrapper {
     width: 400px;
     display: flex;
     flex-direction: column;
