--- a/to-do-list/src/Components/Navbar.css
+++ b/to-do-list/src/Components/Navbar.css
@@ -69,7 +69,8 @@
   
   .menu-nav.show-menu {
     width: 100%;
-    transform: translateX(0);
+    padding: 0;
+    transform: translateX(70px);
   }
   
   
