--- a/to-do-list/src/Components/Inside.css
+++ b/to-do-list/src/Components/Inside.css
@@ -8,6 +8,8 @@
   }
   .wrapper {
     display: flex;
+    margin-top: -150px;
+    margin-left: -50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -18,7 +20,7 @@
     width: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     margin: 0;
     padding: 0;
     gap: 10px;
@@ -50,8 +52,9 @@
     color: #727070;
   }
   
-  .completed {
-    opacity: 0.5;
+  .completed .task-text {
+    opacity: 0.2;
     text-decoration: line-through;
+    color: red;
   }
   
