--- a/to-do-list/src/Pages/About.css
+++ b/to-do-list/src/Pages/About.css
@@ -14,6 +14,7 @@
   }
   
   .profile-container {
+    padding-top: 10px;
     margin: 30px;
     text-align: center;
     margin-bottom: 10px; 
@@ -47,6 +48,6 @@
   .about-paragraph {
     text-align: center;
     margin-top: 50px;
-   
+    font-size: 20px;
   }
   
